# rbm

./: CMakeLists.txt
include/rbm/: grbm.h  rbm.h  tools.h  types.h
include/rbm/impl/: grbm.hpp  rbm.hpp
test/: test_8_5.cpp  test_8_5_grbm.cpp
